--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "20.10.1",
     "@types/react": "18.2.39",
     "@types/react-dom": "18.2.17",
+    "@workos-inc/node": "^4.0.0",
     "autoprefixer": "10.4.16",
     "eslint": "8.54.0",
     "eslint-config-next": "^14.0.3",
+    "jose": "^5.1.3",
     "next": "^14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
